# cmake-nvim-practice

.cache/clangd/index/: Math.cpp.8D920B38900C4FF4.idx  Math.h.9DA1DB4AC3D50A9B.idx  glad.c.0D5E5B0DCC77B1B0.idx  glad.h.828AE3BD79EBFAE5.idx  khrplatform.h.504185945524FA9D.idx  main.cpp.885F9817B2993B8A.idx
source/: CMakeLists.txt  Math.cpp  Math.h  main.cpp
source/include/: Math.h
source/src/: Math.cpp  main.cpp
